import React from "react";
import directive from "..";
import { snapshotTest } from "../../helpers/test-helpers";

describe("anchor element", () => {
  describe("renderes anchor elements correctly", () => {
    it("Anchor with href and title", () => {
      snapshotTest(
        <directive.a href="https://github.com/mkhstar" title="anchor" />
      );
    });
    it("Anchor with dirShow set to false", () => {
      snapshotTest(
        <directive.a dirShow={false}>Some text content</directive.a>
      );
    });
    it("Anchor with dirIf set to false", () => {
      snapshotTest(<directive.a dirIf={false}>Some text content</directive.a>);
    });

    it("Anchor with classNames", () => {
      snapshotTest(
        <directive.a
          className={{ "should-show": true, "should-not-show": false }}
        >
          Some text content
        </directive.a>
      );
    });
  });
});

describe("div element", () => {
  it("renders correctly for div with no properties", () => {
    snapshotTest(<directive.div />);
  });

  it("renders correctly for div with dirIf set to false", () => {
    snapshotTest(<directive.div dirIf={false} />);
  });

  it("renders correctly for div with dirShow set to false", () => {
    snapshotTest(<directive.div dirShow={false} />);
  });

  it("renders correctly for div with className", () => {
    snapshotTest(<directive.div className="test-class" />);
  });

  it("renders correctly for div with class generated by useClassName hook", () => {
    snapshotTest(<directive.div className={{ test: true }} />);
  });

  it("renders correctly for div with dirFor", () => {
    snapshotTest(
      <directive.div dirFor={[1, 2, 3]}>{(item) => item}</directive.div>
    );
  });
});
