// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`anchor element renderes anchor elements correctly Anchor with classNames 1`] = `
<a
  className="should-show"
>
  Some text content
</a>
`;

exports[`anchor element renderes anchor elements correctly Anchor with dirIf set to false 1`] = `null`;

exports[`anchor element renderes anchor elements correctly Anchor with dirShow set to false 1`] = `
<a
  style={
    {
      "display": "none",
    }
  }
>
  Some text content
</a>
`;

exports[`anchor element renderes anchor elements correctly Anchor with href and title 1`] = `
<a
  href="https://github.com/mkhstar"
  title="anchor"
/>
`;

exports[`div element renders correctly for div with class generated by useClassName hook 1`] = `
<div
  className="test"
/>
`;

exports[`div element renders correctly for div with className 1`] = `
<div
  className="test-class"
/>
`;

exports[`div element renders correctly for div with dirFor 1`] = `
[
  <div>
    1
  </div>,
  <div>
    2
  </div>,
  <div>
    3
  </div>,
]
`;

exports[`div element renders correctly for div with dirIf set to false 1`] = `null`;

exports[`div element renders correctly for div with dirShow set to false 1`] = `
<div
  style={
    {
      "display": "none",
    }
  }
/>
`;

exports[`div element renders correctly for div with no properties 1`] = `<div />`;
